@@ -32,3 +32,6 @@ BEGIN
         VALUE "Translation", 0x0409, 0x0000
     END
 END
+
+// eventlog MESSAGETABLE for syslog() emulation
+#include "syslogevt.rc"
