@@ -2,6 +2,10 @@ $Id$
 
 2013-01-26  Christian Franke  <franke@computer.org>
 
+	Windows smartd: Add eventlog MESSAGETABLE resource.
+
+2013-01-26  Christian Franke  <franke@computer.org>
+
 	Windows: Add required string CompanyName to VERSIONINFO.
 
 2013-01-23  Christian Franke  <franke@computer.org>
